[package]
name = "salmon"
version = "0.1.0"
authors = ["mozamimy <alice@mozami.me>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
failure = "0.1"
glob = "0.3"
handlebars = "1.1"
itertools = "0.8"
pulldown-cmark = { version = "0.5", features = ["simd"] }
sass-rs = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
