[package]
name = "salmon"
version = "0.2.0"
edition = "2018"
authors = ["mozamimy <alice@mozami.me>"]
repository = "https://github.com/mozamimy/salmon"
license-file = "LICENSE.txt"
readme = "README.md"
description = "(alpha version) A static site generator specialized for blogging and designed for rabbits. Not for human."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
failure = "0.1"
glob = "0.3"
handlebars = "1.1"
pulldown-cmark = { version = "0.5", features = ["simd"] }
# Use fork version until https://github.com/compass-rs/sass-rs/pull/43 is open.
sass-rs = { git = "https://github.com/mozamimy/sass-rs.git", branch = "make-libsass-env" }
scraper = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
syntect = "3.2"
